# comptext-mcp

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJEKT.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRACTS.md  OPEN_CODE_SETUP.md  ROADMAP.md
examples/: opencode.unix.json  opencode.windows.json
scripts/: build_wheel.ps1  install_windows.ps1
src/comptext_mcp/: formatter.py  policy.py  runner.py  rust_tools.py  server.py
tests/: test_import.py  test_policy.py  test_tool_schema.py
