[project]
name = "comptext-mcp"
version = "0.1.0"
description = "CompText MCP bridge for OpenCode, Rust workspaces, replay digests, and deterministic context packs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ProfRandom92" }]
keywords = ["mcp", "opencode", "rust", "comptext", "context", "replay"]
dependencies = [
  "mcp>=1.0.0,<2.0.0",
  "pydantic>=2.0.0,<3.0.0"
]

[project.scripts]
comptext-mcp = "comptext_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comptext_mcp"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
